@@ -52,6 +52,7 @@ Bug Fixes
 
 * LUCENE-6378: Fix all RuntimeExceptions to throw the underlying root cause.
   (Varun Thacker, Adrien Grand, Mike McCandless)
+
 ======================= Lucene 5.1.0 =======================
 
 New Features
@@ -108,6 +109,10 @@ Bug Fixes
 * LUCENE-6311: Fix NIOFSDirectory and SimpleFSDirectory so that the
   toString method of IndexInputs confess when they are from a compound
   file. (Robert Muir, Mike McCandless)
+
+* LUCENE-6381: Add defensive wait time limit in
+  DocumentsWriterStallControl to prevent hangs during indexing if we
+  miss a .notify/All somewhere (Mike McCandless)
 
 Optimizations
 
